# COSC498

./: .gitignore  EXAMPLE_bootstrap.bat  EXAMPLE_bootstrap.sh  README.rst  pyproject.toml
tests/: conftest.py  data.sql  test_auth.py  test_blog.py  test_db.py  test_factory.py  test_home.py
trackpack/: __init__.py  auth.py  db.py  home.py  schema.sql
trackpack/static/: scripts.js  style.css
trackpack/static/images/: Thumbs.db  pencil_icon.png~RF395978c9.TMP
trackpack/templates/: base.html  old_base.html
trackpack/templates/auth/: login.html  register.html
trackpack/templates/home/: add.html  edit.html  home.html  index.html  index_backup.html  landing.html
