[project]
name = "trackpack"
version = "1.0.0"
description = "The MVP version of the package tracking app for my capstone course."
readme = "README.rst"
license = {file = "LICENSE.txt"}
maintainers = [{name = "Zack Maltzman", email = "zmaltzman1@live.maryville.edu"}]
classifiers = ["Private :: Do Not Upload"]
dependencies = [
    "flask",
]

[project.urls]
Documentation = "https://github.com/zmaltzman-maryville/COSC498"

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["flit_core<4"]
build-backend = "flit_core.buildapi"

[tool.flit.module]
name = "trackpack"

[tool.flit.sdist]
include = [
    "tests/",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = ["error"]

[tool.coverage.run]
branch = true
source = ["trackpack", "tests"]

[tool.ruff]
src = ["src"]
